--- a/css/styles.css
+++ b/css/styles.css
@@ -121,10 +121,10 @@ ion-icon[name="logo-twitter"] {
 .twitter-logo,
 .instagram-logo {
   border: 1px solid hsl(0, 0%, 59%);
-  border-radius: 15px;
+  border-radius: 20px;
 
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
 
   margin-bottom: 30px;
 
@@ -141,6 +141,8 @@ ion-icon[name="logo-twitter"] {
 .twitter.icon,
 .instagram.icon {
   color: hsl(223, 87%, 63%);
+
+  padding: 3px 0 5px;
 }
 
 .social-media .facebook.f.icon:hover,
