--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ ion-icon[name="logo-twitter"] {
 .twitter-logo,
 .instagram-logo {
   border: 1px solid hsl(0, 0%, 59%);
-  border-radius: 20px;
+  border-radius: 25px;
 
   width: 40px;
   height: 40px;
@@ -142,23 +142,34 @@ ion-icon[name="logo-twitter"] {
 .instagram.icon {
   color: hsl(223, 87%, 63%);
 
-  padding: 3px 0 5px;
+  padding-top: 3px;
+  padding-left: 2px;
+}
+
+.social-media .twitter.icon {
+  padding-left: 3px;
 }
 
 .social-media .facebook.f.icon:hover,
 .instagram.icon:hover,
 .twitter.icon:hover {
+  height: 100%;
+  width: 100%;
+
+  padding-top: 3px;
+  padding-left: 1px;
+
   color: white;
   background-color: hsl(223, 87%, 63%);
 
+  transition: 0.1s;
+
   border-radius: 15px;
-  height: 100%;
-  width: 100%;
 }
 
 @media screen and (max-width: 930px) {
   .container {
-    padding-top: 170px;
+    padding-top: 80px;
   }
 
   .page-logo {
@@ -184,7 +195,7 @@ ion-icon[name="logo-twitter"] {
     width: 81%;
     height: 78px;
 
-    font-size: 38px;
+    font-size: 23px;
 
     border-radius: 30px;
 
@@ -215,13 +226,13 @@ ion-icon[name="logo-twitter"] {
   .facebook-logo,
   .twitter-logo,
   .instagram-logo {
-    width: 50px;
-    height: 50px;
+    width: 15%;
+    height: 45px;
 
     margin-bottom: 55px;
   }
 
-  .facebook-logo,
+  .social-media .facebook-logo,
   .twitter-logo {
     margin-right: 30px;
   }
@@ -229,10 +240,24 @@ ion-icon[name="logo-twitter"] {
   .social-media .facebook.f.icon,
   .twitter.icon,
   .instagram.icon {
-    padding: 8px 0px 5px;
+    padding-top: 5px;
   }
 
   .social-media p {
     font-size: 20px;
+  }
+
+  .social-media .facebook.f.icon:hover,
+  .instagram.icon:hover,
+  .twitter.icon:hover {
+    color: white;
+    background-color: hsl(223, 87%, 63%);
+
+    padding-top: 5px;
+
+    width: 100%;
+    height: 100%;
+
+    border-radius: 25px;
   }
 }
