--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-/*
-font-family: 'Big Shoulders Display', cursive;
-font-family: 'Lexend Deca', sans-serif;
-font-family: 'Libre Franklin', sans-serif;
-*/
-
 * {
   padding: 0;
   margin: 0;
@@ -34,13 +28,14 @@ body {
 }
 
 .page-logo {
-  margin: 0 0 40px 0;
+  margin-bottom: 40px;
 }
 
 .page-info h1 {
   width: 100%;
 
-  margin: 0 0 15px 1px;
+  margin-bottom: 15px;
+
   font-weight: 400;
   font-size: 49px;
 
@@ -56,13 +51,13 @@ body {
 .page-info p {
   font-size: 20px;
 
-  margin: 0 0 30px 0;
+  margin-bottom: 30px;
 }
 
 .registration {
   width: 100%;
 
-  margin: 0 0 90px 0;
+  margin-bottom: 90px;
 }
 
 .registration input {
@@ -199,7 +194,9 @@ ion-icon[name="logo-twitter"] {
 
     border-radius: 30px;
 
-    margin: 0 auto 20px;
+    margin-right: auto;
+    margin-bottom: 20px;
+    margin-left: auto;
 
     display: block;
   }
@@ -212,7 +209,9 @@ ion-icon[name="logo-twitter"] {
 
     border-radius: 30px;
 
-    margin: 0 auto 46px;
+    margin-right: auto;
+    margin-bottom: 46px;
+    margin-left: auto;
 
     display: block;
   }
